# SHU-Computer-Arch

./: .gitignore  .gitmodules  Dockerfile  README.md  build-container-v2.sh  build-container.sh  build-dependency.sh  build.sh  docker-compose.yml  entrypoint.sh
experiments/: exp-1.md  exp-2.md  exp-3.md  exp-4.md  exp-5.md
shared/: install-dependency.sh
shared/experiments/exp1/: CMakeLists.txt  problem-without-code.md  problem.md
shared/experiments/exp1,2/configs/: dist-5.list
shared/experiments/exp1,2/include/: parse_data.h
shared/experiments/exp1,2/scripts/: run-multi-proc.sh
shared/experiments/exp1,2/test/: build.sh  main.cpp  mpi_plot
shared/experiments/exp1/configs/: dist.list
shared/experiments/exp1/include/: parse_data.h  utils.h
shared/experiments/exp1/scripts/: build.sh  run-base.sh  run-multi-node.sh
shared/experiments/exp1/src/: main.cpp  parse_data.cpp  utils.cpp
shared/experiments/exp2/: run_hpl.sh
shared/experiments/exp3/: .clang-format  .clangd  CMakeLists.txt  Make.Linux  README.md  run_benchmark.sh  run_hpl.sh  run_hpl_naive.sh  run_hpl_nodes_map.sh  run_hpl_omp_mpi_mix.sh  summary.py
shared/experiments/exp3/include/: matmul.h  utils.h
shared/experiments/exp3/scripts/: run.sh
shared/experiments/exp3/src/: main.cpp  matmul.cpp
shared/experiments/exp3/tasks/: nodes-1  nodes-12  nodes-2  nodes-24  nodes-3  nodes-4  nodes-6  nodes-8
shared/experiments/exp3/test/: hellomp.c
shared/experiments/exp4/: .clangd  CMakeLists.txt  log
shared/experiments/exp4/include/: custom_config.h  matmul.cuh  matmul.h  utils.h
shared/experiments/exp4/scripts/: build.sh
shared/experiments/exp4/src/: main.cpp  matmul.cpp  matmul.cu  utils.cpp
shared/experiments/exp4/test/: .clangd  CMakeLists.txt  hellomp.c  run.sh
shared/experiments/exp4/tryout/: main.cpp
shared/experiments/exp5/: .clang-format  .clangd  CMakeLists.txt  README.md
shared/experiments/exp5/.cache/clangd/index/: main.cu.68A7269EEFC81D94.idx
shared/experiments/exp5/results/: result.txt  time
shared/experiments/exp5/src/: main.cu
shared/experiments/exp5/test/: CMakeLists.txt  build.sh  test.cu
shared/experiments/exp5/test/.cache/clangd/index/: test.cu.0A2B683A571F8961.idx
shared/experiments/tryout/: CMakeLists.txt  build.sh
single-docker/: Dockerfile  build-container-single.sh  run-container-single.sh
